turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:30: error: type mismatch;
 found   : java.awt.Color
 required: Int
	state = rule(state)(couleurSol);
                            ^